# solo2

./: .envrc  .gitignore  .gitlab-ci.yml  0001-pin-cortex-m-semihosting-for-logging.patch  70-nitrokey-3.rules  70-solo-bee.rules  CHANGELOG.md  Dockerfile  Info.plist  LICENSE-MIT  Makefile  README.md  docker-Makefile  nk3-quickstart.md
app/: Cargo.toml  Makefile  bee-fs.elf  bee-hs.elf  build.rs  jlink.gdb  memory-big.x  memory.x  run.sh  tail-serial.py
app/.cargo/: config
app/src/: app_rt.rs  app_rtfm.rs  app_rtic.rs  applet_root.rs  clock_controller.rs  lib.rs  solo_trussed.rs  types.rs  wink.rs
app/src/types/: usb.rs
boards/lpc55-common/: Cargo.toml
boards/lpc55-common/src/: lib.rs
boards/lpcxpresso55/: Cargo.toml
boards/lpcxpresso55/src/: button.rs  led.rs  lib.rs
boards/prototype-bee/: Cargo.toml
boards/prototype-bee/src/: button.rs  led.rs  lib.rs
boards/solo-bee-traits/: Cargo.toml
boards/solo-bee-traits/src/: buttons.rs  lib.rs  rgb_led.rs  timer.rs
components/admin-app/: Cargo.toml
components/admin-app/src/: admin.rs  lib.rs  management.rs
components/apdu-dispatch/: .gitrepo  Cargo.toml  README.md
components/apdu-dispatch/src/: app.rs  applet.rs  dispatch.rs  lib.rs  types.rs
components/apdu-dispatch/src/dispatch/: tests.rs
components/apdu-dispatch/tests/: dispatch.rs  dispatch_test.rs
components/apdu-manager/: Cargo.toml  README.md
components/apdu-manager/src/: apdu.rs  lib.rs  manager.rs  test_apdu.rs  test_manager.rs  traits.rs  types.rs
components/apdu-manager/src/manager/: tests.rs
components/applet-fido/: Cargo.toml
components/applet-fido/src/: cbor.rs  fido.rs  lib.rs
components/applet-ndef/: Cargo.toml
components/applet-ndef/src/: ndef.rs
components/applet-root/: Cargo.toml
components/applet-root/src/: lib.rs  root.rs
components/crypto-service/: .gitignore  Cargo.toml  Makefile
components/crypto-service/src/: api.rs  client.rs  config.rs  error.rs  lib.rs  mechanisms.rs  pipe.rs  service.rs  storage.rs  store.rs  tests.rs  types.rs
components/crypto-service/src/api/: macros.rs
components/crypto-service/src/mechanisms/: aes256cbc.rs  chacha8poly1305.rs  ed25519.rs  hmacsha256.rs  p256.rs  sha256.rs  trng.rs
components/ctap-types/: .gitrepo  Cargo.toml
components/ctap-types/fuzz/: Cargo.toml
components/ctap-types/fuzz/fuzz_targets/: example.rs
components/ctap-types/src/: authenticator.rs  cose.rs  ctap1.rs  ctap2.rs  ctaphid.rs  lib.rs  operation.rs  rpc.rs  serde.rs  sizes.rs  webauthn.rs
components/ctap-types/src/ctap2/: client_pin.rs  credential_management.rs  get_assertion.rs  get_info.rs  get_next_assertion.rs  make_credential.rs
components/ctap-types/src/serde/: de.rs  error.rs  ser.rs
components/ctap-types/tests/: bennofs.rs
components/ctaphid-dispatch/: Cargo.toml
components/ctaphid-dispatch/src/: app.rs  command.rs  constants.rs  dispatch.rs  lib.rs  types.rs
components/delog/: Cargo.toml  build.rs
components/delog/examples/: around.rs  hex.rs  log.rs  try_log.rs
components/delog/gate-tests/: Cargo.toml  Makefile  README.md
components/delog/gate-tests/lib-a/: Cargo.toml
components/delog/qemu-tests/: .gitignore  Cargo.toml  Makefile  README.md  memory.x  qemu.gdb
components/delog/src/: example.rs  flushers.rs  hex.rs  lib.rs  log_macros.rs  log_macros_global.rs  log_macros_local.rs  logger.rs  render.rs  try_log.rs
components/dispatch-fido/: Cargo.toml
components/dispatch-fido/src/: cbor.rs  fido.rs  lib.rs
components/fido-authenticator/: '  .gitrepo  Cargo.toml
components/fido-authenticator/src/: constants.rs  credential.rs  credential_management.rs  ctap2.rs  lib.rs  state.rs
components/fm11nc08/: Cargo.toml
components/fm11nc08/src/: chip.rs  device.rs  lib.rs  traits.rs
components/hid-dispatch/: Cargo.toml
components/hid-dispatch/src/: app.rs  command.rs  dispatch.rs  lib.rs  types.rs
components/interchange/: .gitrepo  Cargo.toml
components/interchange/src/: lib.rs  macros.rs  main.rs  main2.rs  scratch.rs
components/iso14443/: Cargo.toml
components/iso14443/src/: iso14443.rs  lib.rs  types.rs
components/iso7816/: .gitrepo  Cargo.toml
components/iso7816/src/: command.rs  lib.rs  response.rs
components/littlefs2/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE
components/littlefs2/src/: driver.rs  fs.rs  io.rs  lib.rs  macros.rs
components/littlefs2/tests/: test_serde.rs
components/logging/: Cargo.toml  README.md
components/logging/src/: hex.rs  lib.rs
components/lpc55-hal/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  darkness.gdb  jlink.gdb  netlify.toml  pyocd.gdb
components/lpc55-hal/.cargo/: config
components/lpc55-hal/.circleci/: config.yml
components/lpc55-hal/examples/: README.md  adc.rs  aes.rs  baby_usb.rs.hidden  ctimer.rs  external_interrupts.rs  flash.rs  i2c.rs  itm.rs  jump-to-bootloader.rs  late.rs  led_dwt.rs  led_minimalist.rs  led_sleep.rs.deactivated  led_utick.rs  measure_frequency.rs  pfr.rs  prince.rs  puf.rs  pwm.rs  rng.rs  rtc.rs  rtic_led.rs  rtt.rs  salty.rs.hidden  semihosting.rs  serial.rs  sha.rs  spi.rs  touch.rs  usb.rs  usb_test_class.rs
components/lpc55-hal/scripts/: bump-jlink.py  extract-flexcomm-data.py  flash-jlink-ob  generates-pll-settings.py  jlink  test_serial.py
components/lpc55-hal/src/: drivers.rs  lib.rs  macros.rs  peripherals.rs  prelude.rs  time.rs  traits.rs  typestates.rs
components/management-app/: Cargo.toml
components/management-app/src/: lib.rs
components/ndef-app/: Cargo.toml
components/ndef-app/src/: ndef.rs
components/nfc-device/: Cargo.toml
components/nfc-device/src/: chip.rs  driver.rs  iso14443.rs  lib.rs
components/piv-authenticator/: .gitrepo  Cargo.toml  Makefile  bacon.toml
components/piv-authenticator/src/: commands.rs  constants.rs  container.rs  der.rs  error.rs  lib.rs  piv_types.rs  state.rs
components/piv-authenticator/tests/: generate_asymmetric_keypair.rs  get_data.rs  put_data.rs
components/piv-card/: Cargo.toml
components/piv-card/src/: constants.rs  der.rs  derp.rs  error.rs  lib.rs  state.rs
(+329 files in other folders)
