[package]
name = "app"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[lib]
name = "app"

# [[bin]]
# name = "rt"
# path = "src/app_rt.rs"

[[bin]]
name = "rtfm"
path = "src/app_rtfm.rs"

[dependencies]
cortex-m-funnel = { version = "0.1.0-alpha.1", features = ["release_max_level_info"] }
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
heapless = "0.5.3"
ufmt = "0.1.0"
usb-device = "0.2.3"
# usbd-ctaphid = { git = "https://github.com/nickray/usbd-ctaphid", branch = "main", features = ["logging"] }
usbd-serial = "0.1.0"

# board
lpcxpresso55 = { path = "../boards/lpcxpresso55", optional = true }
prototype-bee = { path = "../boards/prototype-bee", optional = true }

# components
crypto-service = { path = "../components/crypto-service" }
ctap-types = { path = "../components/ctap-types" }
fido-authenticator = { path = "../components/fido-authenticator" }
usbd-ctaphid = { path = "../components/usbd-ctaphid" }

# panic
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.3", features = ["jlink-quirks"] }

# storage
littlefs2 = { git = "https://github.com/nickray/littlefs2", branch = "main" }

[features]
default = ["board-lpcxpresso"]
board-lpcxpresso = ["lpcxpresso55"]
board-prototype = ["prototype-bee"]

# patch dependencies like so to test local changes

[patch."https://github.com/nickray/lpc55-hal"]
lpc55-hal = { path = "../../lpc55-hal" }
[patch."https://github.com/nickray/littlefs2"]
littlefs2 = { path = "../../littlefs2" }
