[package]
name = "app"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[lib]
name = "app"

# [[bin]]
# name = "rt"
# path = "src/app_rt.rs"

[[bin]]
name = "rtfm"
path = "src/app_rtfm.rs"

[dependencies]
cortex-m-funnel = { version = "0.1.0-alpha.1" }
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = { version = "0.3.5", optional = true }
heapless = "0.5.3"
ufmt = "0.1.0"
usb-device = "0.2.3"
# usbd-ctaphid = { git = "https://github.com/nickray/usbd-ctaphid", branch = "main", features = ["logging"] }
usbd-serial = "0.1.0"

# board
lpc55-hal = { git = "https://github.com/nickray/lpc55-hal", branch = "main" }
lpcxpresso55 = { path = "../boards/lpcxpresso55", optional = true }
prototype-bee = { path = "../boards/prototype-bee", optional = true }

# components
crypto-service = { path = "../components/crypto-service" }
ctap-types = { path = "../components/ctap-types" }
fido-authenticator = { path = "../components/fido-authenticator" }
usbd-ccid = { path = "../components/usbd-ccid" }
usbd-ctaphid = { path = "../components/usbd-ctaphid" }

# panic
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.3", features = ["jlink-quirks"] }

# storage
littlefs2 = { git = "https://github.com/nickray/littlefs2", branch = "main" }

[features]
default = ["board-lpcxpresso"]
# use this to format internal flash filesystem,
# for instance to hard reset
format-storage = []

board-lpcxpresso = ["lpcxpresso55"]
board-prototype = ["prototype-bee"]

highspeed = ["lpc55-hal/highspeed-usb"]

# log debug! level of app itself?
debug-app = []
# log debug! level of component libraries?
debug-crypto-service = ["crypto-service/debug-logs"]
debug-fido-authenticator = ["fido-authenticator/debug-logs"]

# This would need funnel features to be additive, not subtractive
# debug = [] # "cortex-m-funnel/release_max_level_debug"]

# Not sure if this approach works either, code size doesn't seem to change
disable-debug = ["cortex-m-funnel/release_max_level_info"]

# destination for all logs, by default none
# log-itm = []
# log-rtt = []
log-serial = []
log-semihosting = ["cortex-m-semihosting"]

trace-crypto-service-ram = ["crypto-service/deep-semihosting-logs"]
crypto-service-semihosting = ["crypto-service/semihosting"]
fido-authenticator-semihosting = ["fido-authenticator/semihosting"]
semihost-raw-responses = ["usbd-ctaphid/semihost-responses"]

# patch dependencies like so to test local changes

[patch."https://github.com/nickray/lpc55-hal"]
lpc55-hal = { path = "../../lpc55-hal" }
[patch."https://github.com/nickray/littlefs2"]
littlefs2 = { path = "../../littlefs2" }
[patch.crates-io]
cortex-m-funnel = { git = "https://github.com/conorpp/cortex-m-funnel" }
heapless = { path = "../../heapless" }
ufmt = { path = "../../ufmt" }
# lpc55s6x-pac = { path = "../../lpc55-pacs" }
