[package]
name = "app"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[lib]
name = "app"

# [[bin]]
# name = "rt"
# path = "src/app_rt.rs"

[[bin]]
name = "rtfm"
path = "src/app_rtfm.rs"

[dependencies]
cortex-m-funnel = { version = "0.1.0-alpha.1" }
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = { version = "0.3.5", optional = true }
heapless = "0.5.5"
ufmt = "0.1.0"
usb-device = "0.2.3"
# usbd-ctaphid = { git = "https://github.com/nickray/usbd-ctaphid", branch = "main", features = ["logging"] }
usbd-serial = "0.1.0"

# board
# lpc55-hal = { git = "https://github.com/nickray/lpc55-hal", branch = "main" }
lpc55-hal = { git = "https://github.com/nickray/lpc55-hal", branch = "main" }
lpcxpresso55 = { path = "../boards/lpcxpresso55", optional = true }
prototype-bee = { path = "../boards/prototype-bee", optional = true }

# components
c-stubs = { path = "../components/c-stubs" }
trussed = { path = "../components/trussed" }
ctap-types = { path = "../components/ctap-types" }
fido-authenticator = { path = "../components/fido-authenticator" }
interchange = { path = "../components/interchange" }
piv-card = { path = "../components/piv-card" }
usbd-ccid = { path = "../components/usbd-ccid" }
usbd-ctaphid = { path = "../components/usbd-ctaphid" }

# panic
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.3", features = ["jlink-quirks"] }

# storage
# littlefs2 = { git = "https://github.com/nickray/littlefs2", branch = "main" }
littlefs2 = { git = "https://github.com/nickray/littlefs2", branch = "closures-instead-of-ub" }

[features]
default = ["board-lpcxpresso"]
# use this to format internal flash filesystem,
# for instance to hard reset
format-storage = []
no-semihosting = ["cortex-m-semihosting/no-semihosting"]

board-lpcxpresso = ["lpcxpresso55"]
board-prototype = ["prototype-bee"]

highspeed = ["lpc55-hal/highspeed-usb"]
serial = []

# log debug! level of app itself?
debug-app = []
# log debug! level of component libraries?
debug-trussed = ["trussed/debug-logs"]
debug-fido-authenticator = ["fido-authenticator/debug-logs"]

# This would need funnel features to be additive, not subtractive
# debug = [] # "cortex-m-funnel/release_max_level_debug"]

# Not sure if this approach works either, code size doesn't seem to change
disable-debug = ["cortex-m-funnel/release_max_level_info"]

# destination for all logs, by default none
# log-itm = []
# log-rtt = []
log-serial = []
log-semihosting = ["cortex-m-semihosting"]

trace-trussed-ram = ["trussed/deep-semihosting-logs"]
trussed-semihosting = ["trussed/semihosting"]
fido-authenticator-semihosting = ["fido-authenticator/semihosting"]
semihost-raw-responses = ["usbd-ctaphid/semihost-responses"]

# patch dependencies like so to test local changes

# [patch."https://github.com/nickray/lpc55-hal"]
# lpc55-hal = { path = "../../lpc55-hal" }
# [patch."https://github.com/nickray/littlefs2"]
# littlefs2 = { path = "../../littlefs2" }
[patch.crates-io]
cortex-m-funnel = { git = "https://github.com/conorpp/cortex-m-funnel" }
# ufmt = { path = "../../ufmt" }
ufmt = { git = "https://github.com/nickray/ufmt", branch = "nickray-derive-empty-enums" }
ufmt-macros = { git = "https://github.com/nickray/ufmt", branch = "nickray-derive-empty-enums" }
# ufmt-macros = { git = "https://github.com/nickray/ufmt/macros", branch = "nickray-derive-empty-enums" }
# lpc55s6x-pac = { path = "../../lpc55-pacs" }
heapless = { git = "https://github.com/nickray/heapless", branch = "nickray-udebug" }
cortex-m-semihosting = { git = "https://github.com/nickray/cortex-m-semihosting", branch = "no-semihosting" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
# codegen-units = 1
incremental = false
debug = true
# lto = true
