[package]
name = "lpc55-common"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
nb = "1"
board-traits = {path = "../board-traits"}

[dependencies.lpc55-hal]
git = "https://github.com/lpc55/lpc55-hal"
branch = "main"
features = ["littlefs", "rtic-peripherals"]

