[package]
name = "lpcxpresso55"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>, Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"

solo-bee-traits = {path = "../solo-bee-traits"}
nb = "0.1"

[dependencies.lpc55-hal]
git = "https://github.com/nickray/lpc55-hal"
branch = "main"
features = ["littlefs", "rtfm-peripherals"]
