[package]
name = "lpcxpresso55"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
nb = "0.1"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
solo-bee-traits = {path = "../solo-bee-traits"}
lpc55-common = {path = "../lpc55-common"}

[dependencies.lpc55-hal]
git = "https://github.com/nickray/lpc55-hal"
branch = "main"
features = ["littlefs", "rtic-peripherals"]
