[package]
name = "prototype-bee"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
embedded-hal = { version = "0.2", features = ["unproven"] }
nb = "0.1"
lpc55-common = {path = "../lpc55-common"}
trussed-board = {path = "../../components/trussed-board"}

[dependencies.lpc55-hal]
git = "https://github.com/nickray/lpc55-hal"
branch = "main"
features = ["littlefs", "rtic-peripherals"]
# path = "../../../../lpc55-hal"

