[package]
name = "solo-bee-traits"
version = "0.0.0-unreleased"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
nb = "0.1"
void = { version = "1", default-features = false }

[profile.release]
codegen-units = 1
# lto = true
# opt-level = "s"
incremental = false
debug = true
