[package]
name = "apdu-dispatch"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "0.1"
heapless = { version = "0.5.5" }

# Components
iso7816 = { path = "../iso7816", features = ["contact-interchange", "contactless-interchange"] }
logging = {path = "../logging"}
interchange = {path = "../interchange"}

# Testing
serial_test = { version = "*", optional=true }

[features]
default = []
std = ["logging/std", "serial_test"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
heapless = { git = "https://github.com/nicolas-solokeys/heapless", branch = "bytebuf" }
