[package]
name = "apdu-dispatch"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.2.0"

# Components
iso7816 = { path = "../iso7816" }
interchange = "0.2.0"

# Testing
serial_test = { version = "*", optional = true }

[features]
default = []
std = ["delog/std", "serial_test"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
