[package]
name = "applet-fido"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0-alpha.2"
heapless = { version = "0.5.5" }
serde = { version = "1.0", default-features = false }

fido-authenticator = {path = "../fido-authenticator"}
apdu-dispatch = {path = "../apdu-dispatch"}
hid-dispatch = {path = "../hid-dispatch"}
iso7816 = { path = "../iso7816" }
interchange= { path = "../interchange" }
ctap-types = { path = "../ctap-types" }
trussed = { path = "../trussed" }

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
