[package]
name = "applet-fido"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.2.0"
serde = { version = "1", default-features = false }

apdu-dispatch = {path = "../apdu-dispatch"}
ctap-types = { path = "../ctap-types" }
fido-authenticator = {path = "../fido-authenticator"}
hid-dispatch = {path = "../hid-dispatch"}
interchange = "0.1.0"
iso7816 = { path = "../iso7816" }
trussed = { git = "https://github.com/trussed-dev/trussed", branch = "main" }

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
