[package]
name = "applet-ndef"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.5.5" }

apdu-manager = {path = "../apdu-manager"}
iso7816 = { path = "../iso7816" }
