[package]
name = "applet-root"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = {path = "../apdu-dispatch"}
iso7816 = { path = "../iso7816" }
hid-dispatch = {path = "../hid-dispatch"}
trussed = { git = "ssh://git@github.com/trussed-dev/trussed.git", branch = "main" }
