[package]
name = "crypto-service"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.3.2"
chacha20 = { version = "0.3.3" }
chacha20poly1305 = { version = "0.3.1", features = ["reduced-round"] }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
generic-array = "0.12.3"  # "0.13.2"
# generic-array = { version = "0.13.2", default-features = false }
heapless = "0.5.3"

[dependencies.heapless-bytes]
git = "https://github.com/ycrypto/heapless-bytes"
branch = "main"

[dependencies.littlefs2]
path = "../../../littlefs2"
# git = "https://github.com/nickray/littlefs2"
# branch = "main"

[dependencies.nisty]
version = "0.1.0-alpha.2"
features = ["asn1-der", "cose"]
# path = "../../../nisty"
# git = "https://github.com/ycrypto/nisty"
# branch = "main"

[dependencies.salty]
git = "https://github.com/ycrypto/salty"
branch = "main"
features = ["cose"]

[features]
verbose-tests = ["littlefs2/ll-assertions"]
verbose-lfs = ["littlefs2/ll-assertions", "littlefs2/ll-trace"]

# [patch."https://github.com/nickray/littlefs2".littlefs2]
# path = "../../../littlefs2"

# [patch."https://github.com/ycrypto/heapless-bytes".heapless-bytes]
# path = "../../../heapless-bytes"

# [patch.crates-io]
# rustc-hash = { git = "https://github.com/nickray/rustc-hash", branch = "nickray-remove-byteorder" }
