[package]
name = "ctap-types"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
cortex-m-semihosting = "0.3.5"
cosey = "0.1.0-alpha.0" # { git = "https://github.com/ycrypto/cosey", branch = "main" }
heapless = { version = "0.5.5", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-indexed = "0.0.4"
serde_repr = "0.1"
ufmt = "0.1.0"
ufmt-macros = "0.1.0"
# ufmt-macros = { path = "../../../ufmt/macros" }

[dependencies.heapless-bytes]
# version = "0.1.0"
# path = "../../../heapless-bytes"
git = "https://github.com/ycrypto/heapless-bytes"
branch = "main"

[patch.crates-io]
ufmt = { path = "../../../ufmt" }
# ufmt-macros = { path = "../../../ufmt/macros" }
