[package]
name = "ctap-types"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
cbor-smol = "0.3.1"
cosey = "0.2.0"
delog = "0.1.0"
heapless = { version = "0.6", default-features = false, features = ["serde"] }
heapless-bytes = "0.2.0"
interchange = "0.2.0"
iso7816 = { git = "https://github.com/ycrypto/iso7816", branch = "main" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-indexed = "0.1.0"
serde_repr = "0.1"

[features]
log-all = ["cbor-smol/log-all"]
log-none = []

# [patch.crates-io]
# heapless = { git = "https://github.com/nickray/heapless", branch = "bytebuf-0.5.6" }
