[package]
name = "ctaphid-dispatch"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.7"
heapless-bytes = "0.3"
interchange = "0.2.0"

[features]
default = []
std = ["delog/std"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
