[package]
name = "delog"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
typenum = "1.12.0"
hex_fmt = "0.3.0"

[dev-dependencies]
insta = "1.3.0"

[features]
std = []
# randomly-panic = []
example = ["std"]
