[package]
name = "delog"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[dependencies]
cortex-m-semihosting = { version = "0.3.5", optional = true }
log = "0.4.11"
typenum = "1.12.0"
hex_fmt = "0.3.0"

[dev-dependencies]
insta = "1.3.0"

[features]
default = ["fallible", "immediate"]
std = []
example = ["std"]
semihosting = ["cortex-m-semihosting"]
fallible = []
immediate = []
# statistics = []
