[package]
name = "dispatch-fido"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.3"
interchange = "0.2.0"
serde = { version = "1", default-features = false }

apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch", branch = "main" }
ctap-types = { git = "https://github.com/solokeys/ctap-types", branch = "main" }
fido-authenticator = { git = "https://github.com/solokeys/fido-authenticator", branch = "main" }
iso7816 = { git = "https://github.com/ycrypto/iso7816", branch = "main" }
trussed = { git = "https://github.com/trussed-dev/trussed", branch = "main" }

ctaphid-dispatch = {path = "../ctaphid-dispatch"}

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
