[package]
name = "fido-authenticator"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cortex-m-funnel = { version = "0.1.0-alpha.1", optional = true }
cortex-m-funnel = { version = "0.1.0-alpha.1" }
cortex-m-semihosting = { version = "0.3.5", optional = true }
ctap-types = { path = "../ctap-types" }
crypto-service = { path = "../crypto-service" } # , default-features = false }
littlefs2 = { path = "../../../littlefs2" }
# embedded-hal = { version = "0.2", features = ["unproven"] }
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = "0.0.3"
# usbd-ctaphid = { git = "https://github.com/nickray/usbd-ctaphid", branch = "main", features = ["logging"] }
ufmt = "0.1.0"

[features]
debug-logs = []
semihosting = ["cortex-m-semihosting"]
