[package]
name = "fido-authenticator"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctap-types = { path = "../ctap-types" }
trussed = { path = "../trussed" } # , default-features = false }
heapless = "0.5.5"
interchange = { path = "../interchange" }
logging = { path = "../logging" }
# littlefs2 = { path = "../../../littlefs2" }
littlefs2 = { git = "https://github.com/nickray/littlefs2", branch = "closures-instead-of-ub" }
# embedded-hal = { version = "0.2", features = ["unproven"] }
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = "0.0.3"
ufmt = "0.1.0"

[features]
enable-fido-pre = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []