[package]
name = "fido-authenticator"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctap-types = { path = "../ctap-types" }
delog = "0.1.0"
heapless = "0.6"
interchange = "0.1.0"
littlefs2 = "0.2.1"
serde = { version = "1.0", default-features = false }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = "0.1.0"
trussed = { git = "https://github.com/trussed-dev/trussed", branch = "main" }

[features]
enable-fido-pre = []

disable-reset-time-window = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
