[package]
name = "fm11nc08"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
delog = "0.1.0-alpha.2"
iso14443 = {path = "../iso14443"}
nb = "1"

[dependencies.lpc55-hal]
git = "https://github.com/lpc55/lpc55-hal"
branch = "main"

[features]
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
