[package]
name = "fm11nc08"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
embedded-time = "0.10.1"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
nb = "1"
nfc-device = {path = "../nfc-device"}

[features]
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
