[package]
name = "interchange"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# [[bin]]
# name = "main2"
# path = "src/main2.rs"

[dependencies]
