[package]
name = "iso14443"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
nb = "1"
ufmt = "0.1.0"
heapless = "0.5.5"

apdu-dispatch = { path = "../apdu-dispatch" }
iso7816 = {path = "../iso7816"}
delog = "0.1.0-alpha.2"
interchange = { path = "../interchange" }

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []