[package]
name = "logging"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-funnel = { git = "https://github.com/conorpp/cortex-m-funnel" }
nb = "0.1"
ufmt = "0.1.0"

[features]
default = []
std = []